# epitek

./: .gitignore
1/42sh/: .42rc  .history  .make_msg  42sh  Makefile  auteur  my_bnf_42  op_42
1/42sh/includes/: alias.h  alias_set.h  apply_correction.h  builtins.h  check_cmd.h  check_function.h  chg_tilde_to_home.h  choose_type.h  command.h  creat_lexer.h  dist_levenshtein.h  echo_cmd.h  echo_numbers.h  exec_and_or.h  exec_cmd.h  exec_pipe.h  exec_redir.h  exec_tree.h  free_lex.h  get_all_ope.h  get_inibitor.h  get_the_last.h  get_word.h  gnl.h  history.h  init_node.h  insert_alias.h  many_commands.h  my_handler.h  parser.h  pipeline.h  quotes.h  read_file.h  read_functions.h  redirection.h  set_backslahes.h  sh.h  show_message.h  show_prompt.h  simple_cmd.h  (+24 more)
1/42sh/src/: gnl.c  main.c  my_handler.c  read_file.c  show_prompt.c
1/c/alum1/: 3  Makefile  alum1
1/c/bsq/: Makefile  bsq
1/c/fdf/: Makefile  fonctionnement.txt
1/c/lem-in/: 2000rooms  Makefile  auteurs  lem-in  test
1/c/minishell1/: man+.sh  mysh
1/c/minishell2/: Makefile  cmd  mysh
1/c/minitalk/: Makefile  client  serveur
1/c/my_ls/: Makefile  my_ls
1/c/my_printf/: Makefile  my_printf_i686-Linux.out
1/c/my_select/: Makefile
1/colle/minicut/: Makefile  cut
1/colle/my_mixword/: Makefile  my_mixword
1/colles/morpion/: Makefile  my_morpion
1/colles/ok/: cut
1/colles/opt_get/: compile.sh  main.c  opt_get  opt_get.h
1/cpe/pi/: Makefile
1/esl/pepito/: client  launcher  pepito  pepito_original  rapport.txt
1/include/: my.h
1/lib/my/: my_find_prime_sup.c  my_getnbr.c  my_is_prime.c  my_isneg.c  my_power_it.c  my_power_rec.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_showmem.c  my_showstr.c  my_square_root.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcapitalize.c  my_strcmp.c  my_strcpy.c  my_strcpy.c~  my_strlen.c  my_strlowcase.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c  my_swap.c
1/math/101jacobi/: 101jacobi  Makefile
1/math/103interpol/: 103interpol
1/math/104deriv/: 104deriv
1/pepito_salwan_j/papers/: release-pepito-2011.txt
1/pepito_salwan_j/src/: pepito.tar
1/pepito_salwan_j/tmp/: tab  tab.c
1/piscine/Jour_01/: find_and_clean_it  test6
1/piscine/Jour_02/: aff_groups.sh  bon.sh  closed.sh  count_files.sh  facts.sh  find_sh.sh  nb_nic.sh  r_tacpy.sh  starwars.sh
1/piscine/Jour_03/: my_aff_alpha.c  my_aff_chiffre.c  my_aff_comb.c  my_aff_revalpha.c  my_isneg.c  my_put_nbr.c
1/piscine/Jour_04/: my_evil_str.c  my_getnbr.c  my_putstr.c  my_strlen.c  my_swap.c
1/piscine/Jour_05/: my_factorielle_it.c  my_factorielle_rec.c  my_power_it.c  my_power_rec.c
1/piscine/Jour_06/: auteur  my_putnbr_base.c  my_revstr.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcapitalize.c  my_strcmp.c  my_strcpy.c  my_strlowcase.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c
1/piscine/Jour_07/: my_strcat.c  my_strlcat.c  my_strncat.c
1/piscine/Jour_08/: convert_base.c  my_strdup.c  sum_params.c
1/piscine/Jour_09/: macroABS.h
1/piscine/Jour_11/: definition.h  fonctions.c  my_list_size.c  my_params_in_list.c  my_rev_list.c
1/piscine/sapin/: a.out  sapin.c
1/rush/marvin/: Makefile  auteur  marvin
1/rush/sudoki-bi/: Makefile  auteur
2/: repos  svn.php
2/c/lemipc-2015-2014s-hervet_g/: .make_msg  Makefile  README
2/c/malloc-2015-2014s-poigna_s/: Makefile
2/c/myftp-2015-2014s-hervet_g/: Makefile
2/c/nmobjdump-2015-2014s-hervet_g/: Makefile
2/c/psu-rush1-2015-aubey_g/: auteur
2/cpp/bomberman-2015-beaume_a/: AUTHORS  CMakeLists.txt  README.md  configure
2/cpp/bomberman-2015-beaume_a/backups/: 2012-06-03 01h49m57s.sav  2012-06-03 02h24m52s.sav  2012-06-03 07h14m58s.sav  2012-06-03 18h58m09s.sav
2/cpp/bomberman-2015-beaume_a/maps/: bienpleine.map  editor.map  tortormap5_5.map  toto_map.map  urandom.map
2/cpp/bomberman-2015-beaume_a/res/img/map/: textures_map.xcf
2/cpp/bomberman-2015-beaume_a/res/img/particles/: blast.xcf  particle.xcf
2/cpp/bomberman-2015-beaume_a/src/editor/: CMakeLists.txt  editor.qrc
2/cpp/bomberman-2015-beaume_a/src/editor/include/: Document.hpp  MainWindow.hpp  MapView.hpp  NewFileDialog.hpp
2/cpp/bomberman-2015-beaume_a/src/editor/src/: Document.cpp  MainWindow.cpp  MapView.cpp  NewFileDialog.cpp  main.cpp
2/cpp/bomberman-2015-beaume_a/src/tronberman/: AObject.hpp  Blasts.cpp  Blasts.hpp  Bombs.cpp  Bombs.hpp  BrainIA.cpp  BrainIA.hpp  BrainReal.cpp  BrainReal.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Config.cpp  Config.hpp  Content.cpp  Content.hpp  Core.cpp  Core.hpp  Cube.cpp  Cube.hpp  Deleter.hpp  DirectoryReader.cpp  DirectoryReader.hpp  Error.cpp  Error.hpp  IBrain.hpp  IniFile.cpp  IniFile.hpp  Interp.cpp  Interp.hpp  InterpVect.cpp  InterpVect.hpp  Lights.cpp  Lights.hpp  Map.cpp  Map.hpp  MapGraph.cpp  MapGraph.hpp  MyGame.cpp  MyGame.hpp  (+18 more)
2/cpp/bomberman-2015-beaume_a/src/tronberman/Log/: ILog.hpp  Log.cpp  Log.hpp
2/cpp/bomberman-2015-beaume_a/src/tronberman/Menu/: AMenu.cpp  AMenu.hpp  CreditsView.cpp  CreditsView.hpp  IMenu.hpp  Loader.cpp  Loader.hpp  Main.cpp  Main.hpp  MenuGame.cpp  MenuGame.hpp  Play.cpp  Play.hpp
2/cpp/bomberman-2015-beaume_a/src/tronberman/Menu/Items/: AMenuObject.hpp  AMenuObjectEditable.hpp  BackToMain.cpp  BackToMain.hpp  Credits.cpp  Credits.hpp  FastGame.cpp  FastGame.hpp  ItemMap.cpp  ItemMap.hpp  ItemSave.cpp  ItemSave.hpp  LoadGame.cpp  LoadGame.hpp  Number.cpp  Number.hpp  PrePlay.cpp  PrePlay.hpp  Quit.cpp  Quit.hpp  Restart.cpp  Restart.hpp  Resume.cpp  Resume.hpp  SaveGame.cpp  SaveGame.hpp  Settings.cpp  Settings.hpp  Zlock.cpp  Zlock.hpp
2/cpp/bomberman-2015-beaume_a/src/tronberman/Sound/: FmodManager.cpp  FmodManager.hpp  ISoundManager.hpp
(+1541 files in other folders)
